--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Page Summary</title>
+    <title>Webpage Summary</title>
     <style>
       body {
         font-family: "Segoe UI", sans-serif;
@@ -24,6 +24,7 @@
       #summary {
         background: #fff;
         padding: 12px;
+        padding-bottom: 25px;
         border-radius: 8px;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
         max-height: 220px;
