--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
         align-items: center;
         gap: 6px;
       }
-
+      textarea,
       #summary {
         background: #fff;
         padding: 12px;
@@ -34,6 +34,13 @@
         line-height: 1.5;
         white-space: pre-wrap;
         margin-bottom: 12px;
+        border: none;
+        outline: none;
+        resize: none;
+        display: block;
+        box-sizing: border-box;
+        margin-top: 20px;
+        width: 100%;
       }
 
       #captureBtn {
@@ -61,12 +68,17 @@
     </style>
   </head>
   <body>
-    <h3>Webpage Summary</h3>
+    <div class="osk-container">
+      <h3>Webpage Summary</h3>
 
-    <div id="summary">Click the button below to summarize this page.</div>
+      <div id="summary">Click the button below to summarize this page.</div>
 
-    <button id="captureBtn">Summarize Page</button>
+      <button id="captureBtn">Summarize Page</button>
 
+      <!-- <textarea>Click the button below to summarize this page.</textarea>
+
+      <button id="captureBtn">Ask Question</button> -->
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
