--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,9 @@
         width: 500px;
         box-sizing: border-box;
       }
+      .osk-container {
+        width: 100%;
+      }
 
       h3 {
         font-size: 18px;
@@ -21,7 +24,7 @@
         gap: 6px;
       }
       textarea,
-      #summary {
+      .chat-message {
         background: #fff;
         padding: 12px;
         padding-bottom: 25px;
@@ -32,7 +35,7 @@
         font-size: 14px;
         color: #444;
         line-height: 1.5;
-        white-space: pre-wrap;
+        /* white-space: pre-wrap; */
         margin-bottom: 12px;
         border: none;
         outline: none;
@@ -41,6 +44,12 @@
         box-sizing: border-box;
         margin-top: 20px;
         width: 100%;
+      }
+      .chat-message.me {
+        background-color: #ffffff;
+        width: max-content;
+        max-width: 100%;
+        margin-left: auto;
       }
 
       #captureBtn {
@@ -58,12 +67,12 @@
       #captureBtn:hover {
         background-color: #45a049;
       }
-
-      #loading {
-        font-size: 14px;
-        color: #888;
-        text-align: center;
-        padding: 20px 0;
+      #chat-wrapper {
+        overflow-y: auto;
+        height: 400px;
+      }
+      #ask-questions {
+        display: none;
       }
     </style>
   </head>
@@ -71,13 +80,19 @@
     <div class="osk-container">
       <h3>Webpage Summary</h3>
 
-      <div id="summary">Click the button below to summarize this page.</div>
+      <div id="chat-wrapper">
+        <div class="chat-message" id="summary">
+          Click the button below to summarize this page.
+        </div>
 
-      <button id="captureBtn">Summarize Page</button>
+        <button id="captureBtn">Summarize Page</button>
+        <div id="chat-messages"></div>
+      </div>
 
-      <!-- <textarea>Click the button below to summarize this page.</textarea>
-
-      <button id="captureBtn">Ask Question</button> -->
+      <div id="ask-questions">
+        <textarea>Click the button below to summarize this page.</textarea>
+        <button id="captureBtn">Ask Question</button>
+      </div>
     </div>
     <script src="popup.js"></script>
   </body>
